ReoLang/src/pt/uminho/di/reolang/ReoLangParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 /Users/nunooliveira/Dropbox/NunoOliveira_Thesis/Thesis/Tools/doctools/ReoLang/ReoLangSpecs/ReoLangParser.g 2013-09-10 15:10:00

	package pt.uminho.di.reolang;
	import java.text.*;
	import java.util.Date;
	import pt.uminho.di.reolang.parsing.util.Error;
	import pt.uminho.di.reolang.parsing.util.ErrorType;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class ReoLangParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "RW_DECIDE", "RW_JOIN", "RW_AS", "RW_OF", "RW_USE", "RW_IN", "RW_NULL", "RW_PATTERN", "RW_EXTENDS", "RW_FLOW", "RW_TO", "RW_OBSERVERS", "RW_STATE", "RW_CHANNEL", "RW_IMPORT", "LIST_OPEN", "LIST_CLOSE", "EQUALS", "SEMICOLON", "COMMA", "COLON", "PORTS_OPEN", "PORTS_CLOSE", "BODY_OPEN", "BODY_CLOSE", "ACCESS_MARK", "QUESTION_MARK", "NOT_MARK", "ARROW_MARK", "LABEL_MARK", "STRUCTURE_MARK", "TIME_MARK", "OP_SYNC", "COND_OPEN", "COND_CLOSE", "STRING", "FILE_PATH", "ID", "INT", "FLOAT", "COMMENT", "WS", "ESC_SEQ", "HEX_DIGIT", "UNICODE_ESC", "OCTAL_ESC", "REO_LANG", "ELEMENT", "DIRECTIVE", "IMPORT", "CHANNEL", "SIGNATURE", "OPTION", "TIMED", "TIME", "STRUCTURED", "DIMENSION", "CHANNEL_PORTS", "IN_PORTS", "OUT_PORTS", "PORT", "CONDITION", "COND_ELEMENTS", "EXTENSION", "CHANNEL_BODY", "FLOWS", "CHANNEL_STATE", "STATE_REF", "STATE_OBS", "FLOW", "REQUESTS", "REQUEST", "FLOW_TYPE", "NORMAL_FLOW", "FLOW_POINT", "FLOW_OP", "IF_FLOW", "FLOW_TRUE", "FLOW_FALSE", "PATTERN", "PATTERN_SIGNATURE", "PATTERN_PORTS", "PATTERN_BODY", "PATTERN_DECLARATIONS", "DECLARATION", "INSTANCES", "DECLARATION_TYPE", "PATTERN_COMPOSITIONS", "PORT_DEFINITION", "PORT_ACTUAL_DEFINITION", "PORT_ACCESS", "JOIN_OP", "PORT_ACCESS_LIST", "STOCH"
    };
    public static final int PATTERN_PORTS=85;
    public static final int IN_PORTS=62;
    public static final int PORT_ACTUAL_DEFINITION=93;
    public static final int INSTANCES=89;
    public static final int STOCH=97;
    public static final int OCTAL_ESC=49;
    public static final int CONDITION=65;
    public static final int EQUALS=21;
    public static final int RW_USE=8;
    public static final int RW_FLOW=13;
    public static final int FLOW_TYPE=76;
    public static final int PATTERN_DECLARATIONS=87;
    public static final int EOF=-1;
    public static final int RW_CHANNEL=17;
    public static final int PATTERN_COMPOSITIONS=91;
    public static final int PATTERN=83;
    public static final int ARROW_MARK=32;
    public static final int IMPORT=53;
    public static final int RW_TO=14;
    public static final int COND_OPEN=37;
    public static final int ACCESS_MARK=29;
    public static final int RW_JOIN=5;
    public static final int STRUCTURED=59;
    public static final int FLOWS=69;
    public static final int RW_NULL=10;
    public static final int QUESTION_MARK=30;
    public static final int ELEMENT=51;
    public static final int CHANNEL=54;
    public static final int DIMENSION=60;
    public static final int COND_ELEMENTS=66;
    public static final int FLOW_TRUE=81;
    public static final int RW_EXTENDS=12;
    public static final int LIST_OPEN=19;
    public static final int COMMENT=44;
    public static final int PORTS_OPEN=25;
    public static final int REO_LANG=50;
    public static final int BODY_OPEN=27;
    public static final int REQUESTS=74;
    public static final int IF_FLOW=80;
    public static final int PATTERN_BODY=86;
    public static final int INT=42;
    public static final int SEMICOLON=22;
    public static final int SIGNATURE=55;
    public static final int WS=45;
    public static final int NOT_MARK=31;
    public static final int FLOW=73;
    public static final int FLOW_FALSE=82;
    public static final int STRUCTURE_MARK=34;
    public static final int BODY_CLOSE=28;
    public static final int NORMAL_FLOW=77;
    public static final int OPTION=56;
    public static final int RW_PATTERN=11;
    public static final int RW_OF=7;
    public static final int DECLARATION_TYPE=90;
    public static final int PORTS_CLOSE=26;
    public static final int FLOAT=43;
    public static final int ID=41;
    public static final int DIRECTIVE=52;
    public static final int DECLARATION=88;
    public static final int LABEL_MARK=33;
    public static final int TIME=58;
    public static final int ESC_SEQ=46;
    public static final int COMMA=23;
    public static final int CHANNEL_STATE=70;
    public static final int RW_IMPORT=18;
    public static final int RW_OBSERVERS=15;
    public static final int COND_CLOSE=38;
    public static final int PORT_DEFINITION=92;
    public static final int TIMED=57;
    public static final int UNICODE_ESC=48;
    public static final int HEX_DIGIT=47;
    public static final int PORT=64;
    public static final int TIME_MARK=35;
    public static final int RW_AS=6;
    public static final int STATE_REF=71;
    public static final int OP_SYNC=36;
    public static final int CHANNEL_BODY=68;
    public static final int LIST_CLOSE=20;
    public static final int JOIN_OP=95;
    public static final int CHANNEL_PORTS=61;
    public static final int FLOW_OP=79;
    public static final int COLON=24;
    public static final int OUT_PORTS=63;
    public static final int PATTERN_SIGNATURE=84;
    public static final int REQUEST=75;
    public static final int RW_STATE=16;
    public static final int STATE_OBS=72;
    public static final int PORT_ACCESS_LIST=96;
    public static final int FLOW_POINT=78;
    public static final int RW_DECIDE=4;
    public static final int RW_IN=9;
    public static final int PORT_ACCESS=94;
    public static final int EXTENSION=67;
    public static final int FILE_PATH=40;
    public static final int STRING=39;

    // delegates
    // delegators


        public ReoLangParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public ReoLangParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return ReoLangParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/nunooliveira/Dropbox/NunoOliveira_Thesis/Thesis/Tools/doctools/ReoLang/ReoLangSpecs/ReoLangParser.g"; }


    	private ArrayList<Error> syntax_errors = new ArrayList<Error>();
    	private String file_path;
    	
    	public void emitErrorMessage(String msg) {
            syntax_errors.add(new Error(ErrorType.ERROR, msg, this.file_path));
        }
    	
    	//Notice the access to the errors of the imported grammars
    	public ArrayList<Error> getErrors() {
    		return this.syntax_errors;
    	}
    	
    	public String getFilePath() {
    		return this.file_path;
    	}

    	public void setFilePath(String file) {
    		this.file_path = file;
    	}


    public static class reolang_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "reolang"
    // /Users/nunooliveira/Dropbox/NunoOliveira_Thesis/Thesis/Tools/doctools/ReoLang/ReoLangSpecs/ReoLangParser.g:94:1: reolang : ( directive_def )* ( element )* -> ^( REO_LANG ( directive_def )* ( element )* ) ;
    public final ReoLangParser.reolang_return reolang() throws RecognitionException {
        ReoLangParser.reolang_return retval = new ReoLangParser.reolang_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        ReoLangParser.directive_def_return directive_def1 = null;

        ReoLangParser.element_return element2 = null;


        RewriteRuleSubtreeStream stream_element=new RewriteRuleSubtreeStream(adaptor,"rule element");
        RewriteRuleSubtreeStream stream_directive_def=new RewriteRuleSubtreeStream(adaptor,"rule directive_def");
        try {
            // /Users/nunooliveira/Dropbox/NunoOliveira_Thesis/Thesis/Tools/doctools/ReoLang/ReoLangSpecs/ReoLangParser.g:95:2: ( ( directive_def )* ( element )* -> ^( REO_LANG ( directive_def )* ( element )* ) )
            // /Users/nunooliveira/Dropbox/NunoOliveira_Thesis/Thesis/Tools/doctools/ReoLang/ReoLangSpecs/ReoLangParser.g:95:4: ( directive_def )* ( element )*
            {
            // /Users/nunooliveira/Dropbox/NunoOliveira_Thesis/Thesis/Tools/doctools/ReoLang/ReoLangSpecs/ReoLangParser.g:95:4: ( directive_def )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==RW_IMPORT) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /Users/nunooliveira/Dropbox/NunoOliveira_Thesis/Thesis/Tools/doctools/ReoLang/ReoLangSpecs/ReoLangParser.g:95:4: directive_def
            	    {
            	    pushFollow(FOLLOW_directive_def_in_reolang251);
            	    directive_def1=directive_def();

            	    state._fsp--;

            	    stream_directive_def.add(directive_def1.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            // /Users/nunooliveira/Dropbox/NunoOliveira_Thesis/Thesis/Tools/doctools/ReoLang/ReoLangSpecs/ReoLangParser.g:95:19: ( element )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==RW_PATTERN||LA2_0==RW_CHANNEL) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // /Users/nunooliveira/Dropbox/NunoOliveira_Thesis/Thesis/Tools/doctools/ReoLang/ReoLangSpecs/ReoLangParser.g:95:19: element
            	    {
            	    pushFollow(FOLLOW_element_in_reolang254);
            	    element2=element();

            	    state._fsp--;

            	    stream_element.add(element2.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);



            // AST REWRITE
            // elements: directive_def, element
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 95:28: -> ^( REO_LANG ( directive_def )* ( element )* )
            {
                // /Users/nunooliveira/Dropbox/NunoOliveira_Thesis/Thesis/Tools/doctools/ReoLang/ReoLangSpecs/ReoLangParser.g:95:31: ^( REO_LANG ( directive_def )* ( element )* )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(REO_LANG, "REO_LANG"), root_1);

                // /Users/nunooliveira/Dropbox/NunoOliveira_Thesis/Thesis/Tools/doctools/ReoLang/ReoLangSpecs/ReoLangParser.g:95:42: ( directive_def )*
                while ( stream_directive_def.hasNext() ) {
                    adaptor.addChild(root_1, stream_directive_def.nextTree());

                }
                stream_directive_def.reset();
                // /Users/nunooliveira/Dropbox/NunoOliveira_Thesis/Thesis/Tools/doctools/ReoLang/ReoLangSpecs/ReoLangParser.g:95:57: ( element )*
                while ( stream_element.hasNext() ) {
                    adaptor.addChild(root_1, stream_element.nextTree());

                }
                stream_element.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "reolang"

    public static class element_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "element"
    // /Users/nunooliveira/Dropbox/NunoOliveira_Thesis/Thesis/Tools/doctools/ReoLang/ReoLangSpecs/ReoLangParser.g:98:1: element : ( channel_def -> ^( ELEMENT channel_def ) | pattern_def -> ^( ELEMENT pattern_def ) );
    public final ReoLangParser.element_return element() throws RecognitionException {
        ReoLangParser.element_return retval = new ReoLangParser.element_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        ReoLangParser.channel_def_return channel_def3 = null;

        ReoLangParser.pattern_def_return pattern_def4 = null;


        RewriteRuleSubtreeStream stream_channel_def=new RewriteRuleSubtreeStream(adaptor,"rule channel_def");
        RewriteRuleSubtreeStream stream_pattern_def=new RewriteRuleSubtreeStream(adaptor,"rule pattern_def");
        try {
            // /Users/nunooliveira/Dropbox/NunoOliveira_Thesis/Thesis/Tools/doctools/ReoLang/ReoLangSpecs/ReoLangParser.g:99:2: ( channel_def -> ^( ELEMENT channel_def ) | pattern_def -> ^( ELEMENT pattern_def ) )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==RW_CHANNEL) ) {
                alt3=1;
            }
            else if ( (LA3_0==RW_PATTERN) ) {
                alt3=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;
            }
            switch (alt3) {
                case 1 :
                    // /Users/nunooliveira/Dropbox/NunoOliveira_Thesis/Thesis/Tools/doctools/ReoLang/ReoLangSpecs/ReoLangParser.g:99:4: channel_def
                    {
                    pushFollow(FOLLOW_channel_def_in_element279);
                    channel_def3=channel_def();

                    state._fsp--;

                    stream_channel_def.add(channel_def3.getTree());


                    // AST REWRITE
                    // elements: channel_def
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 99:17: -> ^( ELEMENT channel_def )
                    {
                        // /Users/nunooliveira/Dropbox/NunoOliveira_Thesis/Thesis/Tools/doctools/ReoLang/ReoLangSpecs/ReoLangParser.g:99:20: ^( ELEMENT channel_def )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(ELEMENT, "ELEMENT"), root_1);

                        adaptor.addChild(root_1, stream_channel_def.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 2 :
                    // /Users/nunooliveira/Dropbox/NunoOliveira_Thesis/Thesis/Tools/doctools/ReoLang/ReoLangSpecs/ReoLangParser.g:100:4: pattern_def
                    {
                    pushFollow(FOLLOW_pattern_def_in_element293);
                    pattern_def4=pattern_def();

                    state._fsp--;

                    stream_pattern_def.add(pattern_def4.getTree());


                    // AST REWRITE
                    // elements: pattern_def
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 100:17: -> ^( ELEMENT pattern_def )
                    {
                        // /Users/nunooliveira/Dropbox/NunoOliveira_Thesis/Thesis/Tools/doctools/ReoLang/ReoLangSpecs/ReoLangParser.g:100:20: ^( ELEMENT pattern_def )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(ELEMENT, "ELEMENT"), root_1);

                        adaptor.addChild(root_1, stream_pattern_def.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "element"

    public static class directive_def_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "directive_def"
    // /Users/nunooliveira/Dropbox/NunoOliveira_Thesis/Thesis/Tools/doctools/ReoLang/ReoLangSpecs/ReoLangParser.g:107:1: directive_def : directive_import -> ^( DIRECTIVE directive_import ) ;
    public final ReoLangParser.directive_def_return directive_def() throws RecognitionException {
        ReoLangParser.directive_def_return retval = new ReoLangParser.directive_def_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        ReoLangParser.directive_import_return directive_import5 = null;


        RewriteRuleSubtreeStream stream_directive_import=new RewriteRuleSubtreeStream(adaptor,"rule directive_import");
        try {
            // /Users/nunooliveira/Dropbox/NunoOliveira_Thesis/Thesis/Tools/doctools/ReoLang/ReoLangSpecs/ReoLangParser.g:108:2: ( directive_import -> ^( DIRECTIVE directive_import ) )
            // /Users/nunooliveira/Dropbox/NunoOliveira_Thesis/Thesis/Tools/doctools/ReoLang/ReoLangSpecs/ReoLangParser.g:108:4: directive_import
            {
            pushFollow(FOLLOW_directive_import_in_directive_def317);
            directive_import5=directive_import();

            state._fsp--;

            stream_directive_import.add(directive_import5.getTree());


            // AST REWRITE
            // elements: directive_import
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 108:21: -> ^( DIRECTIVE directive_import )
            {
                // /Users/nunooliveira/Dropbox/NunoOliveira_Thesis/Thesis/Tools/doctools/ReoLang/ReoLangSpecs/ReoLangParser.g:108:24: ^( DIRECTIVE directive_import )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(DIRECTIVE, "DIRECTIVE"), root_1);

                adaptor.addChild(root_1, stream_directive_import.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "directive_def"

    public static class directive_import_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "directive_import"
    // /Users/nunooliveira/Dropbox/NunoOliveira_Thesis/Thesis/Tools/doctools/ReoLang/ReoLangSpecs/ReoLangParser.g:112:1: directive_import : RW_IMPORT FILE_PATH SEMICOLON -> ^( IMPORT FILE_PATH ) ;
    public final ReoLangParser.directive_import_return directive_import() throws RecognitionException {
        ReoLangParser.directive_import_return retval = new ReoLangParser.directive_import_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token RW_IMPORT6=null;
        Token FILE_PATH7=null;
        Token SEMICOLON8=null;

        Object RW_IMPORT6_tree=null;
        Object FILE_PATH7_tree=null;
        Object SEMICOLON8_tree=null;
        RewriteRuleTokenStream stream_SEMICOLON=new RewriteRuleTokenStream(adaptor,"token SEMICOLON");
        RewriteRuleTokenStream stream_RW_IMPORT=new RewriteRuleTokenStream(adaptor,"token RW_IMPORT");
        RewriteRuleTokenStream stream_FILE_PATH=new RewriteRuleTokenStream(adaptor,"token FILE_PATH");

        try {
            // /Users/nunooliveira/Dropbox/NunoOliveira_Thesis/Thesis/Tools/doctools/ReoLang/ReoLangSpecs/ReoLangParser.g:113:2: ( RW_IMPORT FILE_PATH SEMICOLON -> ^( IMPORT FILE_PATH ) )
            // /Users/nunooliveira/Dropbox/NunoOliveira_Thesis/Thesis/Tools/doctools/ReoLang/ReoLangSpecs/ReoLangParser.g:113:4: RW_IMPORT FILE_PATH SEMICOLON
            {
            RW_IMPORT6=(Token)match(input,RW_IMPORT,FOLLOW_RW_IMPORT_in_directive_import338);  
            stream_RW_IMPORT.add(RW_IMPORT6);

            FILE_PATH7=(Token)match(input,FILE_PATH,FOLLOW_FILE_PATH_in_directive_import340);  
            stream_FILE_PATH.add(FILE_PATH7);

            SEMICOLON8=(Token)match(input,SEMICOLON,FOLLOW_SEMICOLON_in_directive_import342);  
            stream_SEMICOLON.add(SEMICOLON8);



            // AST REWRITE
            // elements: FILE_PATH
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 113:34: -> ^( IMPORT FILE_PATH )
            {
                // /Users/nunooliveira/Dropbox/NunoOliveira_Thesis/Thesis/Tools/doctools/ReoLang/ReoLangSpecs/ReoLangParser.g:113:37: ^( IMPORT FILE_PATH )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(IMPORT, "IMPORT"), root_1);

                adaptor.addChild(root_1, stream_FILE_PATH.nextNode());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "directive_import"

    public static class channel_def_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "channel_def"
    // /Users/nunooliveira/Dropbox/NunoOliveira_Thesis/Thesis/Tools/doctools/ReoLang/ReoLangSpecs/ReoLangParser.g:127:1: channel_def : RW_CHANNEL channel_signature ( extension )? BODY_OPEN channel_body BODY_CLOSE -> ^( CHANNEL channel_signature ( extension )? channel_body ) ;
    public final ReoLangParser.channel_def_return channel_def() throws RecognitionException {
        ReoLangParser.channel_def_return retval = new ReoLangParser.channel_def_return();
        retval.start = input.LT(1);

        Object root_0 = null;
